--- a/.github/workflow/first.yaml
+++ b/.github/workflow/first.yaml
@@ -1,1 +1,18 @@
+name : CI
 
+         on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+   workflow_dispatch:
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+  steps:
+      name : Integration
+      uses: actions/checkout@v4
+          
+
+      
