--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: 
+            - self hosted
+             - label-1
 
     steps:
     - uses: actions/checkout@v4
