--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
   build:
 
     runs-on: 
-            - self hosted
-             - label-1
+            self-hosted
 
     steps:
     - uses: actions/checkout@v4
