--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,11 @@ jobs:
             self-hosted
 
     steps:
-    - uses: actions/checkout@v4
-    
+      - name: checkout repository
+        uses: actions/checkout@v4
+   
+  
+      - name: Deploy to Web Server
+        run: |
+          cp -r * /var/www/html/  # Change to your web root directory
+          sudo systemctl restart apache2  # Restart Apache (if needed)
