--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         run: |
               
               sudo cp -r * /var/www/html/
-               sudo chmod -R 755 /var/www/html/  # Ensure proper permissions
+                sudo cp -r "$GITHUB_WORKSPACE"/* /var/www/html/ # Ensure proper permissions
                 sudo systemctl restart apache2  # Restart Apache
