--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -16,6 +16,6 @@
             run: |
               # Replace with your deployment commands
               echo "Deploying..."
-               scp -r ./* root@ip-172-31-47-30:/var/www/html/vertix_bos
-               ssh root@ip-172-31-47-30 "cd /var/www/html/vertix_bos"
+               scp -r /var/www/html/vertix_bos ubuntu@ip-172-31-47-30:~/actions-runner
+               #ssh root@ip-172-31-47-30 "cd /var/www/html/vertix_bos"
             shell: bash
