boom static.yml

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,21 +1,22 @@
-    name: Deploy to Server
+name: Android CI
 
-    on:
-      push:
-        branches:
-          - main
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-    jobs:
-      deploy:
-        runs-on: 
-                - selfhosted
-                 - lable-1
-        steps:
-          - name: Checkout code
-            uses: actions/checkout@v3
+jobs:
+  deploy:
+    runs-on: [self-hosted, label-1]  # Corrected syntax
 
-          - name: Run deployment
-            run: |
-              # Replace with your deployment commands
-              echo "My secret key is: ${{ secrets.SSH_PRIVATE_KEY }}"
-               
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run deployment
+        run: |
+          # Replace with your deployment commands
+          echo "My secret key is: ${{ secrets.SSH_PRIVATE_KEY }}"
