--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,6 +19,7 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+          chmod 644 .ssh/known_hosts
  
       - name: Deployment
         uses: appleboy/ssh-action@master
@@ -29,5 +30,6 @@ jobs:
           port: 22
           script: | 
             cd /var/www/html/vertixxx
-             git pull origin main
+             git branch
+             # git pull origin main
            
