--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,5 +31,5 @@ jobs:
           script: | 
             cd /var/www/html/vertixxx
              git branch
-             # git pull origin main
+             git pull origin main
            
