--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,5 +31,6 @@ jobs:
           script: | 
             cd /var/www/html/vertixxx
              git branch
-             # git pull origin main
+             git remote -v
+             git pull origin main
            
