--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,4 +33,4 @@ jobs:
              git branch
              git remote -v
              git pull origin main
-           
+             git branch
