--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+
  
 jobs:
   deploy:
@@ -19,8 +17,8 @@ jobs:
       - name: Setup SSH for GitHub
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/github_rsa
-          chmod 600 ~/.ssh/github_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H github.com >> ~/.ssh/known_hosts
           chmod 644  ~/.ssh/known_hosts
  
