--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
           script: | 
                   cd /var/www/html/vertixxx
                   git status
-                  git checkout main
-                  git pull origin main
-
+                  sudo git branch
+                  sudo git pull origin main
+            
         
