--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,38 +1,42 @@
-name: HTML-CSS
- 
+name: Deploy to Production Server
+
 on:
   push:
     branches:
       - main
 
- 
 jobs:
   deploy:
     runs-on: self-hosted
- 
+
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
- 
-      - name: Setup SSH for GitHub
+        uses: actions/checkout@v4
+        with:
+          # Use the default GitHub token for checkout
+          persist-credentials: false
+
+      - name: Setup SSH Environment
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-          chmod 644  ~/.ssh/known_hosts
- 
-      - name: Deployment
-        uses: appleboy/ssh-action@master
+          # Correct permissions for known_hosts
+          chmod 600 ~/.ssh/known_hosts
+
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_PEM21_KEY }}
           port: 22
-          script: | 
-                  cd /var/www/html/vertixxx
-                  git status
-                  sudo git branch
-                  sudo git pull origin main
-            
-        
+          script: |
+            cd /var/www/html/vertixxx
+            git remote set-url origin git@github.com:your-username/your-repo.git
+            git fetch origin
+            git checkout main
+            git reset --hard origin/main
+            # Add any post-deploy commands here
+            # e.g., npm install, composer install, etc.
