--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,9 +37,6 @@ jobs:
           port: 22
           script: |
             cd /var/www/html/vertixxx
-            # Update origin URL if needed
-            https://github.com/thiruvenkadam5/Vertix_bos.git            # Pull changes
+            git@github.com:thiruvenkadam5/Vertix_bos.git            
             git pull origin main
-            # Add any post-deploy commands here
-            # Example: npm install, composer install, etc.
             echo "Deployment completed successfully!"
