--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,25 +10,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # If using private repo, add your PAT
-          token: ${{ secrets.GH_TOKEN }}
 
-      - name: Setup SSH for GitHub Access
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-          chmod 644 ~/.ssh/known_hosts
-          
-          # Test GitHub connection
-          ssh -T git@github.com || true
-
-      - name: Deploy to Server
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -37,6 +22,22 @@ jobs:
           port: 22
           script: |
             cd /var/www/html/vertixxx
-            git@github.com:thiruvenkadam5/Vertix_bos.git            
+            
+            # Fix directory permissions
+            sudo chown -R ubuntu:ubuntu .
+            sudo chmod -R 755 .
+            
+            # Clean git state
+            git reset --hard
+            git clean -fd
+            
+            # Set correct remote URL (using HTTPS with token)
+            git remote set-url origin https://${{ secrets.GH_TOKEN }}@github.com/thiruvenkadam5/Vertix_bos.git
+            
+            # Pull changes
+            git config --global --add safe.directory /var/www/html/vertixxx
             git pull origin main
+            
+            # Fix any remaining permissions
+            sudo chown -R www-data:www-data .
             echo "Deployment completed successfully!"
