--- a/.github/workflows/error-mail.yml
+++ b/.github/workflows/error-mail.yml
@@ -13,6 +13,37 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm test
+
+    # If any step above fails, this step will send an email
+    - name: Send email if failure
+      if: failure()
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: ${{ secrets.EMAIL_USERNAME }}
+        #password: ${{ secrets.EMAIL_PASSWORD }}
+        subject: ❌ Project Build/Test Failed
+        to: your@email.com
+        from: GitHub Actions <${{ secrets.EMAIL_USERNAME }}>
+        body: |
+          ❗ The GitHub Actions workflow failed.
+          Repo: ${{ github.repository }}
+          Branch: ${{ github.ref }}
+          Commit: ${{ github.sha }}
+          View logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+
     # If any step above fails, this step will send an email
     - name: Send email if failure
       if: failure()
